@@ -1,6 +1,9 @@
 Changes between 1.0.0b7 and 1.0.0b8
 =====================================
 
+* workaround a logging module interaction ("closing already closed
+  files").  Thanks to Sridhar Ratnakumar for triggering. 
+
 * if plugins use "py.test.importorskip" for importing 
   a dependency only a warning will be issued instead 
   of exiting the testing process. 
